🌜📹 Updated with Glitch

--- a/style.css
+++ b/style.css
@@ -9,11 +9,14 @@ body {
 h1 {
   font-style: italic;
 }
-
-#requestStatus {
-  padding-left: 900px;
+/*
+#fetchTime{
+  padding-left: 350px;
 }
-
+#requestStatus {
+  padding-left: 370px;
+}
+*/
 .headercolor {
   background-color: lightgrey;
 }
@@ -24,9 +27,22 @@ h1 {
 
 #totalFetchedLinks {
   background-color: lightcoral;
+  font-size: 17px;
+  padding: 10px;
 }
 
 .displayMatchedURLs {
   background-color: violet;
   font-size: 25px;
+}
+
+.row:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.column{
+  float: left;
+  width: 33%;
 }
