--- a/style.css
+++ b/style.css
@@ -9,14 +9,7 @@ body {
 h1 {
   font-style: italic;
 }
-/*
-#fetchTime{
-  padding-left: 350px;
-}
-#requestStatus {
-  padding-left: 370px;
-}
-*/
+
 .headercolor {
   background-color: lightgrey;
 }
@@ -45,4 +38,20 @@ h1 {
 .column{
   float: left;
   width: 33%;
+}
+
+.loader {
+  margin: auto;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid skyblue;
+  border-bottom: 16px solid skyblue;
+  width: 80px;
+  height: 80px;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
