--- a/style.css
+++ b/style.css
@@ -114,4 +114,40 @@ h1 {
 @keyframes fadeout {
   from {bottom: 30px; opacity: 1;}
   to {bottom: 0; opacity: 0;}
-  
+}
+
+
+#searchDescription {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: coral; /* coral background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  top: 240px; /* 30px from the top */
+
+}
+
+
+#searchDescription.display {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to appear and disappear the snackbar. 
+  However, delay the disappear process for 5 seconds */
+  animation: appear 0.5s, disappear 0.5s 5s;
+}
+
+@keyframes appear {
+  from {top: 0; opacity: 0;}
+  to {top: 240px; opacity: 1;}
+}
+
+
+@keyframes disappear {
+  from {top: 240px; opacity: 1;}
+  to {top: 0; opacity: 0;}
+}
